--- a/_data/cameras.yml
+++ b/_data/cameras.yml
@@ -126,3 +126,23 @@
     - Load film
     - Check distance
     - Too close
+
+- id: kodak-vr35-k40
+  title: Koday VR35 K40
+  description: Camera for snapshots. It was offered by Kodak from 1986 to 1993
+  specifications:
+    - name: Lens
+      value: 35mm Kodak Ektanar
+    - name: Focus
+      value: Fixed Focus
+    - name: Year
+      value: 1986
+  usage_instructions:
+    - Load film (done already)
+    - Slide open lens cover (turns on camera too)
+    - Look through the viewfinder and frame you shot
+    - Slide up flash button to activate pop-up flash indoors
+    - Press the shutter button to take the picture
+  images:
+    - src: /assets/images/Kodak_VR35 K40.jpg
+      alt: Canon Sure Shot Owl - Front View
