--- a/_data/cameras.yml
+++ b/_data/cameras.yml
@@ -140,7 +140,7 @@
   usage_instructions:
     - Load film (done already)
     - Slide open lens cover (turns on camera too)
-    - Look through the viewfinder and frame you shot
+    - Look through the viewfinder and frame your shot
     - Slide up flash button to activate pop-up flash indoors
     - Press the shutter button to take the picture
   images:
