--- a/_data/cameras.yml
+++ b/_data/cameras.yml
@@ -101,7 +101,7 @@
     - DX film speed setting
 
 - id: minolta-talker
-  title: Minolta Talker
+  title: Minolta AF-Sv / Minolta Talker
   description: <del>Garbo</del>Minolta Speaks! The Minolta Talker is a unique camera that provides voice feedback.
   specifications:
     - name: Type
