--- a/_data/cameras.yml
+++ b/_data/cameras.yml
@@ -10,7 +10,7 @@
       value: Autofocus
     - name: Year
       value: 1981
-  manual_pdf: ""
+  manual_pdf: "/assets/pdfs/canon-af35ml.pdf"
   images:
     - src: /assets/images/CANON_AF35_ML_Shooting.png
       alt: Canon AF35 ML
@@ -19,6 +19,9 @@
     - Turn on the camera
     - Frame your shot
     - Press the shutter button
+  ads:
+    - src: https://mikeeckman.com/wp-content/uploads/2016/04/CanonAd.jpg
+      alt: Canon Add
 
 - id: canon-sure-shot-owl
   title: Canon Sure Shot Owl
